nenolod     2005/09/25 20:24:31 UTC	(20050925-2377)
  Log:
  uhash/shash vulnerability fixes...
  

  Modified:
	trunk/src/node.c (File Modified) 


jilles      2005/09/25 20:03:04 UTC	(20050925-2375)
  Log:
  Don't reference invalid memory if the first character of
  the buffer in irc_packet() is '\n'.
  

  Modified:
	trunk/src/packet.c (File Modified) 


nenolod     2005/09/25 19:58:45 UTC	(20050925-2373)
  Log:
  Don't link a nickname if muptr->pass == NULL.
  

  Modified:
	trunk/modules/nickserv/link.c (File Modified) 


nenolod     2005/09/25 08:25:06 UTC	(20050925-2371)
  Log:
  Unbreak fantasy commands on P10. :P
  

  Modified:
	trunk/protocol/asuka.c (File Modified) 
	trunk/protocol/bircd.c (File Modified) 
	trunk/protocol/undernet.c (File Modified) 


nenolod     2005/09/25 04:31:48 UTC	(20050925-2369)
  Log:
  Fix a core with UserServ::HELP, reported by Cloppy.
  

  Modified:
	trunk/modules/userserv/help.c (File Modified) 


nenolod     2005/09/25 04:19:04 UTC	(20050925-2367)
  Log:
  Don't require nickserv {}.
  

  Modified:
	trunk/src/conf.c (File Modified) 


nenolod     2005/09/25 04:16:42 UTC	(20050925-2365)
  Log:
  Fix the example configuration for UserServ-based environment.
  

  Modified:
	trunk/dist/example.userserv.conf (File Modified) 


nenolod     2005/09/25 03:07:30 UTC	(20050925-2363)
  Log:
  UserServ modifications, part 3 of 3. It's ready for testing.
  

  Modified:
	trunk/help/userserv/ghost (File Deleted) 
	trunk/help/userserv/identify (File Deleted) 
	trunk/help/userserv/link (File Deleted) 
	trunk/help/userserv/login (File Added) 


nenolod     2005/09/25 03:05:34 UTC	(20050925-2361)
  Log:
  UserServ modifications, part 2 of 3.
  

  Modified:
	trunk/help/userserv/ (File Added) 
	trunk/modules/userserv/Makefile.in (File Modified) 
	trunk/modules/userserv/drop.c (File Modified) 
	trunk/modules/userserv/freeze.c (File Modified) 
	trunk/modules/userserv/help.c (File Modified) 
	trunk/modules/userserv/hold.c (File Modified) 